[package]
name = "trouble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.4.0"
backoff-futures = "0.3.2"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = "0.11.23"
tiny_http = "0.12.0"
tokio = { version = "1.35.1", features = ["full"] }
