[package]
name = "waytoodeep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
futures = "0.3.16"
tokio = { version = "1.9.0", features = ["full"] }
tokio-rustls = "0.22.0"
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
webpki = "0.21.4"
webpki-roots = "0.21.1"
